--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+Note: use the main_script.py to get all plots. And data is [here](https://drive.google.com/drive/folders/19bHYdxwkcyJ1AG61rOQJmzWSgeFBOZLm?usp=share_link).
+
 I have the venv established so you can just load this repository to pycharm and everything should work.
 
 main_script.py:
@@ -11,3 +13,7 @@ They are the entry point for price plot and progress plots.
 plot_bar.py
 plot_cdf.py
 Basically the original code from you. some small changed to the plt.figure.
+
+
+
+
